test/sema/uninitialized-global.delta.output
uninitialized-global.delta:4:5: error: global variables cannot be uninitialized
int i = undefined;
    ^
