test/sema/uninitialized-global.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:5: error: global variables cannot be uninitialized
int i = undefined;
